feat: Ridges Added

--- a/src/app/forest/parent-rock/parent-rock.component.html
+++ b/src/app/forest/parent-rock/parent-rock.component.html
@@ -1,3 +1,5 @@
-<div class="rock-container"></div>
-<app-monkey></app-monkey>
-<app-child-rock></app-child-rock>
+<div class="rock-container">
+  <img src="../../../assets/ridge.png" alt="Parent-Rock" class="parent-rock">
+  <app-monkey></app-monkey>
+  <app-child-rock></app-child-rock>
+</div>
