--- a/src/app/forest/parent-rock/parent-rock.component.css
+++ b/src/app/forest/parent-rock/parent-rock.component.css
@@ -1,1 +1,14 @@
+.rock-container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
 
+.parent-rock {
+  width: 300px;
+  height: 120px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: scaleX(-1);
+}
